✨ Add `anonymous` module with `Person` and `Validator` implementations
- 🏗️ Added new `anonymous` module containing `Person` and `Validator` interfaces and tests.
- 📦 Included Kotest dependencies in build configurations.
- ⚙️ Updated project settings to include the new module.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,17 +2,19 @@
 kotlin = "2.0.20"
 object-oriented-programming = "1.0.0"
 detekt = "1.23.6"
-kotest = "5.9.1"
+kotest-framework = "5.9.1"
+kotest-extension = "2.1.2"
 
 [libraries]
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
-kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest" }
-kotest-datatest = { module = "io.kotest:kotest-framework-datatest", version.ref = "kotest" }
-kotest-property = { module = "io.kotest:kotest-property", version.ref = "kotest" }
+kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest-framework" }
+kotest-datatest = { module = "io.kotest:kotest-framework-datatest", version.ref = "kotest-framework" }
+kotest-property = { module = "io.kotest:kotest-property", version.ref = "kotest-framework" }
+kotest-arbs = { module = "io.kotest.extensions:kotest-property-arbs", version.ref = "kotest-extension" }
 
 [plugins]
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 
 [bundles]
-kotest = ["kotest-runner-junit5", "kotest-datatest", "kotest-property"]
+kotest = ["kotest-runner-junit5", "kotest-datatest", "kotest-property", "kotest-arbs"]
